--- a/404.html
+++ b/404.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="author" content="songjinzhong,songjz.ecnu@gmail.com">
     <title>404</title>
     <!-- 记住把下面的 homePageName、homePageUrl 改成你想需要的内容 -->
-    <script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://www.qq.com/" homePageName="回到我的主页"></script>
-
+    <script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="http://www.qq.com/" homePageName="腾讯公益"></script>
   </head>
+
   <body>
-    <!--body is here
-        当 IE 认为这个404页面是不友好的，就不会跳转，所有下面的 404 默认提示
-    -->
-<h1 style="font-size:30px;">
-404
-</h1>
-
-
-    
+    <h1 style="font-size:30px;"><center>Charity 404 Campaign</center></h1>
   </body>
-</html>
+
+  </html>
